[gd_scene load_steps=4 format=3 uid="uid://qa2nogtespyl"]

[ext_resource type="Script" path="res://scripts/dice.gd" id="1_xa5mh"]
[ext_resource type="Texture2D" uid="uid://b7paafcb3cne2" path="res://placeholders/1_dot.png" id="2_dnmno"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0arq3"]
size = Vector2(110, 110)

[node name="dice" type="Node2D" groups=["isDice"]]
script = ExtResource("1_xa5mh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.38419e-06, -2.38419e-07)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_dnmno")

[node name="Area2D" type="Area2D" parent="." groups=["isDice"]]
scale = Vector2(0.8, 0.8)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_0arq3")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
